deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: purple-cross
  labels:
    app.kubernetes.io/part-of: purple-cross
